--- a/html/index.html
+++ b/html/index.html
@@ -30,28 +30,41 @@
     </ul>
     <h1 class="vr_famliy">VR-FAMLIY</h1>
   </div>
+  <div class="under_bg">
   <div class="slider_under">
-  <!-- <ul class="ul_circle">
-    <li class="li_circle"><a href="#"></a></li>
-    <li class="li_circle"><a href="#"></a></li>
-    <li class="li_circle"><a href="#"></a></li>
-  </ul>
-  <ul class="ul_aside">
-    <li class="li_aside">热门站点<a href="#"><span style="font-size:10px;">全网热门站点</span</a></li>
-    <li class="li_aside">历史记录<a href="#"><span style="font-size:10px;">全面记录足迹</span</a></li>
-    <li class="li_aside">资源下载<a href="#"><span style="font-size:10px;">网罗全网资源</span</a></li>
-  </ul> -->
   <li class="li_top">aaa</li>
   <li class="li_top">aaa</li>
   <li class="li_top">aaa</li>
   <li class="li_middle"><a href="#">热门站点</a></li>
-  <li class="li_middle"><a href="#"></a>历史记录</li>
-  <li class="li_middle"><a href="#"></a>资源下载</li>
+  <li class="li_middle"><a href="#">历史记录</a></li>
+  <li class="li_middle"><a href="#">资源下载</a></li>
   <li class="li_bottom">全网热门站点</li>
   <li class="li_bottom">全面记录足迹</li>
   <li class="li_bottom">网罗全网资源</li>
   </div>
   </div>
+  <div class="head_search">
+    <form class="form_input" action="index.html" method="post">
+      <input type="search" class="search_bar" name="input_search" placeholder="请输入关键字">
+      <input type="button" class="search_btn" value="搜索">
+        <i class="search_more">查看更多</i>
+    </form>
+  </div>
+  <div class="video-box">
+    <a href="#"><img src="../img/video1.jpg" alt=""><span class="span_play" style="width:60px;"></span></a>
+    <a href="#"><img src="../img/video2.jpg" alt=""><span class="span_play" style="width:60px;"></span></a>
+    <a href="#"><img src="../img/video3.jpg" alt=""><span class="span_play" style="width:60px;"></span></a>
+    <a href="#"><img src="../img/video4.jpg" alt=""><span class="span_play" style="width:60px;"></span></a>
+  </div>
+  <div class="information" style="background:url(../img/starry.jpg); background-size:cover">
+    <li class="img_information"><img src="../img/information1.jpg" alt=""></li>
+    <li class="img_information"><img src="../img/information2.jpg" alt=""></li>
+    <li class="img_information"><img src="../img/information3.jpg" alt=""></li>
+    <li class="buttom_infomation"><a href="#">秦淮灯会素有“天下第一灯会”美誉，是首批国家级非物质文化遗产</a></li>
+    <li class="buttom_infomation"><a href="#">秦淮灯会素有“天下第一灯会”美誉，是首批国家级非物质文化遗产</a></li>
+    <li class="buttom_infomation"><a href="#">秦淮灯会素有“天下第一灯会”美誉，是首批国家级非物质文化遗产</a></li>
+  </div>
+</div>
 <script type="text/javascript">
 </script>
   </body>
